[gd_scene load_steps=3 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Spaceship.tscn" type="PackedScene" id=2]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Spaceship" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 300 )

[node name="AsteroidSpawnTimer" type="Timer" parent="."]

[node name="GameTimerLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_Timer_timeout"]
